Java Compiler Preview feature enabled.