@@ -20,6 +20,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.0</version>
 				<configuration>
+				    <compilerArgs>--enable-preview</compilerArgs>
 					<encoding>UTF-8</encoding>
 					<source>14</source>
 					<target>14</target>
